--- a/course.html
+++ b/course.html
@@ -19,11 +19,11 @@
         <div class=" w-full absolute flex justify-between px-20 text-xl bg-white " id="nav">
             <div class="flex gap-2" id="leftnav"><i class=" hover:font-bold ri-honor-of-kings-fill text-end text-3xl text-green-600 "></i>&#124; <h1 class="hover:font-bold">CodeCraft</h1></div>
             <div class="flex gap-6 text-zinc-950  " id="rightnav"> 
-                <a class="hover:font-bold" href="/index.html">Home</a> 
-                <a class="hover:font-bold" href="/course.html">Courses</a> 
+                <a class="hover:font-bold" href="index.html">Home</a> 
+                <a class="hover:font-bold" href="course.html">Courses</a> 
                 <!-- <a class="hover:font-bold" href="/campus.html">Campus Ambassdor</a>  -->
-                <a class="hover:font-bold" href="/about.html">about</a> 
-                <a class="hover:font-bold" href="/contact.html">Contact us</a>
+                <a class="hover:font-bold" href="about.html">about</a> 
+                <a class="hover:font-bold" href="contact.html">Contact us</a>
             </div>
             <div>
                 <button class="hover:font-bold">Sign in</button>
