--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
                 <h1 class="hover:font-bold">CodeCraft</h1>
             </div>
             <div class="flex gap-6 text-zinc-950" id="rightnav">
-                <a class="hover:font-bold" href="tailwind.html">Home</a>
-                <a class="hover:font-bold" href="tailwindcourse.html">Courses</a>
+                <a class="hover:font-bold" href="index.html">Home</a>
+                <a class="hover:font-bold" href="course.html">Courses</a>
                 <!-- <a class="hover:font-bold" href="">Campus Ambassador</a> -->
-                <a class="hover:font-bold" href="/about.html">About</a>
-                <a class="hover:font-bold" href="/contact.html">Contact Us</a>
+                <a class="hover:font-bold" href="about.html">About</a>
+                <a class="hover:font-bold" href="contact.html">Contact Us</a>
             </div>
             <div>
                 <button class="hover:font-bold">Sign In</button>
