--- a/contact.html
+++ b/contact.html
@@ -80,9 +80,11 @@
                     <button class="w-40 h-10 bg-green-600 rounded-md" type="submit">Send</button>
                 </form>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <h1 class="text-center text-4xl my-10">See our Location</h1>
+                <iframe class="w-full my-10 rounded-xl" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d393215.2568388382!2d79.879329657281!3d13.04798594700017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5265ea4f7d3361%3A0x6e61a70b6863d433!2sChennai%2C%20Tamil%20Nadu!5e1!3m2!1sen!2sin!4v1728764686265!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            
         </div>
     </div>
     <script src="https://cdn.tailwindcss.com"></script>
